# wget

./: Cargo.toml  README.md  bash-commands.bash  downloads.txt  go.mod  go.sum  main.go  output.html
bblocks/: asyncmulti.go  convert_links.go  create_bar.go  displaydate.go  download-resources.go  downloadFunc.go  downloadfile.go  extract_links.go  file_path.go  file_type.go  formatter.go  getfilename.go  globals.go  mirror-website.go  ratelimit.go  roundbytes.go  wgetLogWrite.go  write-to-file.go  writelogs.go
cmd/: main.go  main2.txt
helpers/: getextension.go  getfilename.go
src/: main.rs
src/lib/: mod.rs  utils.rs
