[package]
name = "wget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
clap = { version = "4.4.12", features = ["derive"] }
futures-util = "0.3.30"
indicatif = "0.17.7"
reqwest = { version = "0.11.23", features = ["blocking", "stream"] }
tokio = { version = "1.35.1", features = ["full"] }
